--- a/banco/bancolami.properties
+++ b/banco/bancolami.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.0
-#Sat Nov 02 19:28:58 BRST 2019
+#Sat Nov 02 23:38:47 BRST 2019
 version=2.5.0
-modified=no
+modified=yes
 tx_timestamp=0
