--- a/banco/lami.properties
+++ b/banco/lami.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.0
-#Tue Nov 05 11:11:16 BRT 2019
-tx_timestamp=0
-modified=yes
+#Wed Nov 06 21:43:13 BRST 2019
 version=2.5.0
+modified=yes
+tx_timestamp=0
